--- a/index.html
+++ b/index.html
@@ -2,15 +2,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <title>Document</title>
+    <title>Hello!</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico">
+
+    <!-- Font Awesome CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-    <h1>Maria Andreescu</h1>
-    <p>Some dummy text here</p>
-    <p>Some dummy text here</p>
-    <p>Some dummy text here</p>
-    <p>Some dummy text here</p>
-    <p>Some dummy text here</p>
-    <p>Some dummy text here</p>
+    <div class="site-wrapper">
+
+        <div class="site-wrapper-inner">
+  
+          <div class="cover-container">
+  
+            <div class="inner cover">
+              <div id="picture_col">
+                <img src="IMG_2223.jpg" alt="Profile picture" class="img-rounded">
+              </div>
+              <div id="text_col">
+                <h1 class="cover-heading">Maria Andreescu</h1>
+                <div>
+                  <a class="btn btn-default" href="mailto:maria[dot]andreescu@stud[dot]acs[dot]upb[dot]ro"><i class="fa fa-envelope fa-2x"></i></a>
+                  <a target="_blank" class="btn btn-default" href="http://uk.linkedin.com/in/maria-elena-andreescu"><i class="fa fa-linkedin fa-2x"></i></a>
+                  <a target="_blank" class="btn btn-default" href="https://www.instagram.com/maria_andreescu/"><i class="fa fa-instagram fa-2x"></i></a>
+                  <a target="_blank" class="btn btn-default" href="https://github.com/mariaandreescu"><i class="fa fa-github fa-2x"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="mastfoot">
+              <div class="inner">
+                <p>&copy; 2021 Maria Andreescu</p>
+              </div>
+            </div>
+  
+          </div>
+  
+        </div>
+  
+      </div>
+  
 </body>
 </html>
